// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceStatuses Renders with all disabled 1`] = `
<div
  className="column_fghohlb"
>
  <p
    className="paragraph_f1nzr65k"
  >
    In order to schedule notebook runs, the following APIs must be enabled:
  </p>
  <div
    className="serviceStatuses_fk872kw"
  >
    <div
      className="serviceStatusItem_f7gbs7g"
      key="storage-api.googleapis.com"
    >
      <WithStyles(CloseIcon) />
      <LearnMoreLink
        href="https://cloud.google.com/storage/"
        text="Cloud Storage API"
      />
    </div>
    <div
      className="serviceStatusItem_f7gbs7g"
      key="ml.googleapis.com"
    >
      <WithStyles(CloseIcon) />
      <LearnMoreLink
        href="https://cloud.google.com/ai-platform/"
        text="AI Platform Training API"
      />
    </div>
    <div
      className="serviceStatusItem_f7gbs7g"
      key="cloudscheduler.googleapis.com"
    >
      <WithStyles(CloseIcon) />
      <LearnMoreLink
        href="https://cloud.google.com/scheduler"
        text="Cloud Scheduler API"
      />
    </div>
    <div
      className="serviceStatusItem_f7gbs7g"
      key="cloudfunctions.googleapis.com"
    >
      <WithStyles(CloseIcon) />
      <LearnMoreLink
        href="https://cloud.google.com/functions/"
        text="Cloud Functions API"
      />
    </div>
  </div>
</div>
`;

exports[`ServiceStatuses Renders with all enabled 1`] = `
<div
  className="column_fghohlb"
>
  <p
    className="paragraph_f1nzr65k"
  >
    In order to schedule notebook runs, the following APIs must be enabled:
  </p>
  <div
    className="serviceStatuses_fk872kw"
  >
    <div
      className="serviceStatusItem_f7gbs7g"
      key="storage-api.googleapis.com"
    >
      <WithStyles(CheckIcon) />
      <LearnMoreLink
        href="https://cloud.google.com/storage/"
        text="Cloud Storage API"
      />
    </div>
    <div
      className="serviceStatusItem_f7gbs7g"
      key="ml.googleapis.com"
    >
      <WithStyles(CheckIcon) />
      <LearnMoreLink
        href="https://cloud.google.com/ai-platform/"
        text="AI Platform Training API"
      />
    </div>
    <div
      className="serviceStatusItem_f7gbs7g"
      key="cloudscheduler.googleapis.com"
    >
      <WithStyles(CheckIcon) />
      <LearnMoreLink
        href="https://cloud.google.com/scheduler"
        text="Cloud Scheduler API"
      />
    </div>
    <div
      className="serviceStatusItem_f7gbs7g"
      key="cloudfunctions.googleapis.com"
    >
      <WithStyles(CheckIcon) />
      <LearnMoreLink
        href="https://cloud.google.com/functions/"
        text="Cloud Functions API"
      />
    </div>
  </div>
</div>
`;

exports[`ServiceStatuses Renders with error 1`] = `
<div
  className="column_fghohlb"
>
  <p
    className="paragraph_f1nzr65k"
  >
    In order to schedule notebook runs, the following APIs must be enabled:
  </p>
  <div
    className="serviceStatuses_fk872kw"
  >
    <div
      className="serviceStatusItem_f7gbs7g"
      key="storage-api.googleapis.com"
    >
      <WithStyles(CloseIcon) />
      <LearnMoreLink
        href="https://cloud.google.com/storage/"
        text="Cloud Storage API"
      />
    </div>
    <div
      className="serviceStatusItem_f7gbs7g"
      key="ml.googleapis.com"
    >
      <WithStyles(CloseIcon) />
      <LearnMoreLink
        href="https://cloud.google.com/ai-platform/"
        text="AI Platform Training API"
      />
    </div>
    <div
      className="serviceStatusItem_f7gbs7g"
      key="cloudscheduler.googleapis.com"
    >
      <WithStyles(CloseIcon) />
      <LearnMoreLink
        href="https://cloud.google.com/scheduler"
        text="Cloud Scheduler API"
      />
    </div>
    <div
      className="serviceStatusItem_f7gbs7g"
      key="cloudfunctions.googleapis.com"
    >
      <WithStyles(CloseIcon) />
      <LearnMoreLink
        href="https://cloud.google.com/functions/"
        text="Cloud Functions API"
      />
    </div>
  </div>
  <Message
    asActivity={false}
    asError={true}
    text="Unable to activate services"
  />
</div>
`;

exports[`ServiceStatuses Renders with pending activation 1`] = `
<div
  className="column_fghohlb"
>
  <p
    className="paragraph_f1nzr65k"
  >
    In order to schedule notebook runs, the following APIs must be enabled:
  </p>
  <div
    className="serviceStatuses_fk872kw"
  >
    <div
      className="serviceStatusItem_f7gbs7g"
      key="storage-api.googleapis.com"
    >
      <WithStyles(CloseIcon) />
      <LearnMoreLink
        href="https://cloud.google.com/storage/"
        text="Cloud Storage API"
      />
    </div>
    <div
      className="serviceStatusItem_f7gbs7g"
      key="ml.googleapis.com"
    >
      <WithStyles(CloseIcon) />
      <LearnMoreLink
        href="https://cloud.google.com/ai-platform/"
        text="AI Platform Training API"
      />
    </div>
    <div
      className="serviceStatusItem_f7gbs7g"
      key="cloudscheduler.googleapis.com"
    >
      <WithStyles(CloseIcon) />
      <LearnMoreLink
        href="https://cloud.google.com/scheduler"
        text="Cloud Scheduler API"
      />
    </div>
    <div
      className="serviceStatusItem_f7gbs7g"
      key="cloudfunctions.googleapis.com"
    >
      <WithStyles(CloseIcon) />
      <LearnMoreLink
        href="https://cloud.google.com/functions/"
        text="Cloud Functions API"
      />
    </div>
  </div>
  <Message
    asActivity={true}
    asError={false}
    text="Enabling all necessary APIs. This may take a few minutes..."
  />
</div>
`;
